- UPDATED: Circuit illustration with Amadeus logo. - UPDATED: Form spacing increased. - UPDATED: Font size on partner testimonial. - UPDATED: Button colours on Press and Careers page back to outline style. - FIXED: Contact form Iain quote moved on mobile.

--- a/src/scss/global/_forms.scss
+++ b/src/scss/global/_forms.scss
@@ -28,7 +28,7 @@ form {
 	label, 
 	.field {
 		width: 100%;
-		padding: 0 $GUTTER/2; margin-bottom: lines(1);
+		padding: 0 $GUTTER/2; margin-bottom: lines(2);
 		position: relative; z-index: 1;
 		float: left; box-sizing: border-box;
 		display: inline-block; vertical-align: top;
