--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -150,8 +150,18 @@
 
 		&:hover {
 			color: $COLOR_WHITE;
-			background-color: lighten($COLOR_BRAND_BASE, 10);
-			border-color: lighten($COLOR_BRAND_BASE, 10);
+			background-color: darken($COLOR_BRAND_BASE, 10);
+			border-color: darken($COLOR_BRAND_BASE, 10);
+		}
+
+		&.-border {
+			color: $COLOR_BRAND_BASE;
+			background-color: transparent;
+
+			&:hover {
+				color: $COLOR_WHITE;
+				background-color: $COLOR_BRAND_BASE;
+			}
 		}
 	}
 
