--- a/src/scss/views/_airlines.scss
+++ b/src/scss/views/_airlines.scss
@@ -329,11 +329,6 @@
 			text-align: center;
 		}
 		
-		section.airlines-findout {
-			.findout-quote {
-				display: none;
-			}
-		}
 
 	}
 
